@@ -1,5 +1,6 @@
 package ar.edu.itba.paw.persistence;
 
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
@@ -11,7 +12,6 @@ import javax.sql.DataSource;
 import ar.edu.itba.paw.models.*;
 import ar.edu.itba.paw.models.enums.SortDirection;
 import ar.edu.itba.paw.models.enums.SortFieldJourney;
-
 import ar.edu.itba.paw.persistence.config.TestConfig;
 
 import org.junit.Before;
@@ -25,6 +25,7 @@ import org.springframework.test.jdbc.JdbcTestUtils;
 import org.springframework.transaction.annotation.Transactional;
 
 import static org.junit.Assert.*;
+import static ar.edu.itba.paw.persistence.TestUtils.*;
 
 @Transactional
 @RunWith(SpringJUnit4ClassRunner.class)
@@ -49,82 +50,138 @@ public class JourneyHibernateDaoTest {
 
     @Test
     public void testCreate(){
-        TestUtils.deleteJourneys(jdbcTemplate);
+        deleteJourneys(jdbcTemplate);
 
         Journey journey = journeyDao.create(
-            TestUtils.USER_1,
-            TestUtils.UNI_2,
-            TestUtils.JOURNEY_START_DATE, TestUtils.JOURNEY_END_DATE, TestUtils.JOURNEY_DESCRIPTION
+            USER_1,
+            UNI_2,
+            JOURNEY_START_DATE, JOURNEY_END_DATE, JOURNEY_DESCRIPTION
         );
         em.flush();
 
-        TestUtils.assertEqualsJourney(journey, Map.of("id", jdbcTemplate.queryForObject(TestUtils.JOURNEY_GET_ID_BY_USER_ID, Long.class, TestUtils.USER_1_ID)));
-        assertEquals(1, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.JOURNEY_TABLE));
+        assertEqualsJourney(
+            journey,
+            Map.of("id", jdbcTemplate.queryForObject(
+                JOURNEY_GET_ID_BY_USER_ID, 
+                Long.class, 
+                USER_1_ID)
+            )
+        );
+        assertEquals(1, JdbcTestUtils.countRowsInTable(jdbcTemplate, JOURNEY_TABLE));
     }
     @Test(expected = PersistenceException.class)
     public void testCreateInvalidUser(){
         journeyDao.create(
-            new User(12341234l, null, null, null, null, null, null, 0, null, false, false),
-            TestUtils.UNI_2,
-            TestUtils.JOURNEY_START_DATE, TestUtils.JOURNEY_END_DATE, TestUtils.JOURNEY_DESCRIPTION
+            new User(
+                12341234l, 
+                null, 
+                null, 
+                null, 
+                null, 
+                null, 
+                null, 
+                0, 
+                null, 
+                false, 
+                false),
+            UNI_2,
+            JOURNEY_START_DATE, 
+            JOURNEY_END_DATE, 
+            JOURNEY_DESCRIPTION
         );
         em.flush();
     }
-    @Test(expected = IllegalArgumentException.class)
+    @Test(expected = PersistenceException.class)
+    public void testCreateMissingUser(){
+        journeyDao.create(
+            null,
+            UNI_2,
+            JOURNEY_START_DATE, 
+            JOURNEY_END_DATE, 
+            JOURNEY_DESCRIPTION
+        );
+        em.flush();
+    }
+    @Test(expected = PersistenceException.class)
     public void testCreateInvalidUni(){
         journeyDao.create(
-            TestUtils.USER_1,
-            new University(12431234l, null,null, null),
-            TestUtils.JOURNEY_START_DATE, TestUtils.JOURNEY_END_DATE, TestUtils.JOURNEY_DESCRIPTION
+            USER_1,
+            new University(12341234l, null, null, null),
+            JOURNEY_START_DATE, 
+            JOURNEY_END_DATE, 
+            JOURNEY_DESCRIPTION
         );
         em.flush();
-    }
-    @Test(expected = IllegalArgumentException.class)
-    public void testCreateDuplicated(){
+    }    @Test(expected = PersistenceException.class)
+    public void testCreateMissingUni(){
         journeyDao.create(
-            TestUtils.USER_1,
-            TestUtils.UNI_2,
-            TestUtils.JOURNEY_START_DATE, TestUtils.JOURNEY_END_DATE, TestUtils.JOURNEY_DESCRIPTION
+            USER_1,
+            null,
+            JOURNEY_START_DATE, 
+            JOURNEY_END_DATE, 
+            JOURNEY_DESCRIPTION
         );
         em.flush();
     }
-    @Test
-    public void testCreateDeleted(){
-        Journey journey = journeyDao.create(
-            TestUtils.JOURNEY_DELETED.getUser(),
-            TestUtils.JOURNEY_DELETED.getDestinationUniversity(),
-            TestUtils.JOURNEY_START_DATE, TestUtils.JOURNEY_END_DATE, TestUtils.JOURNEY_DESCRIPTION
+    @Test(expected = PersistenceException.class)
+    public void testCreateMissingStartDate(){
+        journeyDao.create(
+            USER_1,
+            UNI_2,
+            null, 
+            JOURNEY_END_DATE, 
+            JOURNEY_DESCRIPTION
         );
         em.flush();
-
-        assertFalse(jdbcTemplate.queryForObject(TestUtils.JOURNEY_IS_DELETED_BY_ID, Boolean.class, journey.getId()));
+    }
+    @Test(expected = PersistenceException.class)
+    public void testCreateMissingEndDate(){
+        journeyDao.create(
+            USER_1,
+            UNI_2,
+            JOURNEY_START_DATE, 
+            null,
+            JOURNEY_DESCRIPTION
+        );
+        em.flush();
+    }
+    @Test(expected = PersistenceException.class)
+    public void testCreateMissingDesc(){
+        journeyDao.create(
+            USER_1,
+            UNI_2,
+            JOURNEY_END_DATE, 
+            JOURNEY_START_DATE, 
+            null
+        );
+        em.flush();
     }
 
     @Test
     public void testFindById(){
-        Optional<Journey> maybeJourney = journeyDao.findById(TestUtils.JOURNEY_1_ID);
+        Optional<Journey> maybeJourney = journeyDao.findById(JOURNEY_1_ID);
 
         assertNotNull(maybeJourney);
         assertTrue(maybeJourney.isPresent());
-        TestUtils.assertEqualsJourney(maybeJourney.get());
+        assertEqualsJourney(maybeJourney.get());
     }
     @Test
     public void testFindByIdInvalidId(){
-        Optional<Journey> maybeJourney = journeyDao.findById(12341234);
+        Optional<Journey> maybeJourney = journeyDao.findById(12341234l);
 
         assertNotNull(maybeJourney);
         assertFalse(maybeJourney.isPresent());
     }
     @Test
     public void testFindByIdDeleted(){
-        Optional<Journey> maybeJourney = journeyDao.findById(TestUtils.JOURNEY_DELETED_ID);
+        Optional<Journey> maybeJourney = journeyDao.findById(JOURNEY_DELETED_ID);
 
         assertNotNull(maybeJourney);
         assertFalse(maybeJourney.isPresent());
     }
     @Test
     public void testFindByIdNoJourneys(){
-        Optional<Journey> maybeJourney = journeyDao.findById(12341234);
+        Optional<Journey> maybeJourney = journeyDao.findById(12341234l);
 
         assertNotNull(maybeJourney);
         assertFalse(maybeJourney.isPresent());
@@ -132,31 +189,31 @@ public class JourneyHibernateDaoTest {
 
     @Test
     public void testFindAllPage1(){
-        Page<Journey> page1 = journeyDao.findAll(new PageParams(1, 1));
+        Page<Journey> page1 = journeyDao.findAll(PAGE_1_SINGLE);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
         assertEquals(2, page1.getTotalPages());
         assertNotNull(page1.getContent());
         assertEquals(1, page1.getContent().size());
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_1, page1.getContent().getFirst());
+        assertEqualsJourney(JOURNEY_1, page1.getContent().getFirst());
     }
     @Test
     public void testFindAllPage2(){
-        Page<Journey> page2 = journeyDao.findAll(new PageParams(2, 1));
+        Page<Journey> page2 = journeyDao.findAll(PAGE_2_SINGLE);
 
         assertNotNull(page2);
         assertEquals(2, page2.getCurrentPage());
         assertEquals(2, page2.getTotalPages());
         assertNotNull(page2.getContent());
         assertEquals(1, page2.getContent().size());
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_2, page2.getContent().getFirst());
+        assertEqualsJourney(JOURNEY_2, page2.getContent().getFirst());
     }
     @Test
     public void testFindAllPagedNoJourneys(){
-        TestUtils.deleteJourneys(jdbcTemplate);
+        deleteJourneys(jdbcTemplate);
 
-        Page<Journey> page1 = journeyDao.findAll(TestUtils.PAGE_1_DEFAULT);
+        Page<Journey> page1 = journeyDao.findAll(PAGE_1_DEFAULT);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
@@ -167,7 +224,7 @@ public class JourneyHibernateDaoTest {
 
     @Test
     public void testFindByOriginCityPaged(){
-        Page<Journey> page1 = journeyDao.findByOriginCity(TestUtils.CITY_1_ID, TestUtils.PAGE_1_DEFAULT);
+        Page<Journey> page1 = journeyDao.findByOriginCity(CITY_1_ID, PAGE_1_DEFAULT);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
@@ -177,7 +234,7 @@ public class JourneyHibernateDaoTest {
     }
     @Test
     public void testFindByOriginCityPagedWrongCity(){
-        Page<Journey> page1 = journeyDao.findByOriginCity(1241234, new PageParams(1,2));
+        Page<Journey> page1 = journeyDao.findByOriginCity(1241234l, PAGE_1_DEFAULT);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
@@ -188,24 +245,24 @@ public class JourneyHibernateDaoTest {
 
     @Test
     public void testRecommendedJourneysBasic(){
-        //TestUtils.JOURNEY_2 should have internal score of 95 (30 match city, 50 match uni, 15 overlap)
+        //JOURNEY_2 should have internal score of 95 (30 match city, 50 match uni, 15 overlap)
         //should have internal score of 80 (30 match city, 50 match uni)
-        Journey newJourney = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_3, "startDate", TestUtils.JOURNEY_END_DATE.plusDays(2), "endDate", TestUtils.JOURNEY_END_DATE.plusDays(40)));
+        Journey newJourney = insertJourney(ds, Map.of("user", USER_3, "startDate", JOURNEY_END_DATE.plusDays(2), "endDate", JOURNEY_END_DATE.plusDays(40)));
 
-        Page<Journey> page1 = journeyDao.findRecommended(TestUtils.USER_1_MAIL, TestUtils.PAGE_1_BIG);
+        Page<Journey> page1 = journeyDao.findRecommended(USER_1_MAIL, PAGE_1_BIG);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
         assertEquals(1, page1.getTotalPages());
         assertNotNull(page1.getContent());
         assertEquals(2, page1.getContent().size());
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_2, page1.getContent().get(0));
-        TestUtils.assertEqualsJourney(newJourney, page1.getContent().get(1));
+
+        assertEqualsJourneyList(List.of(JOURNEY_2, newJourney), page1.getContent());
     }
     @Test
     public void testRecommendedJourneysNoJourneys(){
-        TestUtils.deleteJourneys(jdbcTemplate);
-        Page<Journey> page1 = journeyDao.findRecommended(TestUtils.USER_1_MAIL, TestUtils.PAGE_1_BIG);
+        deleteJourneys(jdbcTemplate);
+        Page<Journey> page1 = journeyDao.findRecommended(USER_1_MAIL, PAGE_1_BIG);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
@@ -215,92 +272,80 @@ public class JourneyHibernateDaoTest {
     }
     @Test
     public void testRecommendedJourneysGoingToMyCity(){
-        TestUtils.deleteJourneys(jdbcTemplate);
-        TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_1));
+        deleteJourneys(jdbcTemplate);
+        insertJourney(ds, Map.of("user", USER_1));
         //should have internal score of 80 (30 match origin city while there, 50 match origin uni while there)
-        Journey newJourney1 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_3, "destination", TestUtils.UNI_1, "startDate", TestUtils.JOURNEY_END_DATE.plusDays(-5), "endDate", TestUtils.JOURNEY_END_DATE.plusDays(20)));
+        Journey newJourney1 = insertJourney(ds, Map.of("user", USER_3, "destination", UNI_1, "startDate", JOURNEY_END_DATE.plusDays(-5), "endDate", JOURNEY_END_DATE.plusDays(20)));
         //should have an internal score of 15 (date overlap only)
-        Journey newJourney2 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_4, "destination", TestUtils.UNI_1, "startDate", TestUtils.JOURNEY_END_DATE.plusDays(-10), "endDate", TestUtils.JOURNEY_END_DATE.plusDays(-2)));
+        Journey newJourney2 = insertJourney(ds, Map.of("user", USER_4, "destination", UNI_1, "startDate", JOURNEY_END_DATE.plusDays(-10), "endDate", JOURNEY_END_DATE.plusDays(-2)));
 
-        Page<Journey> page1 = journeyDao.findRecommended(TestUtils.USER_1_MAIL, TestUtils.PAGE_1_BIG);
+        Page<Journey> page1 = journeyDao.findRecommended(USER_1_MAIL, PAGE_1_BIG);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
         assertEquals(1, page1.getTotalPages());
         assertNotNull(page1.getContent());
         assertEquals(2, page1.getContent().size());
-        TestUtils.assertEqualsJourney(newJourney1, page1.getContent().get(0));
-        TestUtils.assertEqualsJourney(newJourney2, page1.getContent().get(1));
+        assertEqualsJourneyList(List.of(newJourney1, newJourney2), page1.getContent());
     }
     @Test
     public void testRecommendedJourneysWithInterests(){
         //should have internal score of 116 (50 + 30 match dest uni, 15 overlap, 21 interest match)
-        Journey newJourney1 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_I3));
+        Journey newJourney1 = insertJourney(ds, Map.of("user", USER_I3));
         //should have internal score of 113 (50 + 30 match dest uni, 15 overlap, 18 interest match)
-        Journey newJourney2 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_I2));
+        Journey newJourney2 = insertJourney(ds, Map.of("user", USER_I2));
         //should have internal score of 107 (50 + 30 match dest uni, 15 overlap, 12 interest match)
-        Journey newJourney3 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_I1));
-        //TestUtils.JOURNEY_2 should have internal score of 95 (50 + 30 match dest uni, 15 overlap)
+        Journey newJourney3 = insertJourney(ds, Map.of("user", USER_I1));
+        //JOURNEY_2 should have internal score of 95 (50 + 30 match dest uni, 15 overlap)
 
-        Page<Journey> page1 = journeyDao.findRecommended(TestUtils.USER_1_MAIL, TestUtils.PAGE_1_BIG);
+        Page<Journey> page1 = journeyDao.findRecommended(USER_1_MAIL, PAGE_1_BIG);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
         assertEquals(1, page1.getTotalPages());
         assertNotNull(page1.getContent());
         assertEquals(4, page1.getContent().size());
-        TestUtils.assertEqualsJourney(newJourney1, page1.getContent().get(0));
-        TestUtils.assertEqualsJourney(newJourney2, page1.getContent().get(1));
-        TestUtils.assertEqualsJourney(newJourney3, page1.getContent().get(2));
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_2, page1.getContent().get(3));
+        assertEqualsJourneyList(List.of(JOURNEY_2, newJourney1, newJourney2, newJourney3), page1.getContent());
     }
     @Test
     public void testRecommendedJourneysWithInterestsComplex(){
-        TestUtils.deleteJourneys(jdbcTemplate);
-        TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_1));
+        deleteJourneys(jdbcTemplate);
+        insertJourney(ds, Map.of("user", USER_1));
         //should have internal score of 107 (50 + 30 match dest uni, 15 overlap, 12 interest match)
-        Journey newJourney1 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_I1));
+        Journey newJourney1 = insertJourney(ds, Map.of("user", USER_I1));
         //should have internal score of 98 (50 + 30 match origin uni, 18 interest match)
-        Journey newJourney2 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_I2, "destination", TestUtils.UNI_1, "startDate", TestUtils.JOURNEY_END_DATE.plusDays(2), "endDate", TestUtils.JOURNEY_END_DATE.plusDays(30)));
+        Journey newJourney2 = insertJourney(ds, Map.of("user", USER_I2, "destination", UNI_1, "startDate", JOURNEY_END_DATE.plusDays(2), "endDate", JOURNEY_END_DATE.plusDays(30)));
         //should have internal score of 36 (15 overlap, 21 interest match)
-        Journey newJourney3 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_I3, "destination", TestUtils.UNI_1, "startDate", TestUtils.JOURNEY_END_DATE.plusDays(-7), "endDate", TestUtils.JOURNEY_END_DATE.plusDays(-3)));
-        //TestUtils.JOURNEY_2 should have internal score of 95 (50 + 30 match dest uni, 15 overlap)
+        Journey newJourney3 = insertJourney(ds, Map.of("user", USER_I3, "destination", UNI_1, "startDate", JOURNEY_END_DATE.plusDays(-7), "endDate", JOURNEY_END_DATE.plusDays(-3)));
+        //JOURNEY_2 should have internal score of 95 (50 + 30 match dest uni, 15 overlap)
         //should have internal score of 80 (50 + 30 match dest uni)
-        Journey newJourney4 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_3, "startDate", TestUtils.JOURNEY_END_DATE.plusDays(2), "endDate", TestUtils.JOURNEY_END_DATE.plusDays(20)));
+        Journey newJourney4 = insertJourney(ds, Map.of("user", USER_3, "startDate", JOURNEY_END_DATE.plusDays(2), "endDate", JOURNEY_END_DATE.plusDays(20)));
         //should have internal score of 45 (30 city match, 15 overlap)
-        Journey newJourney5 = TestUtils.insertJourney(ds, Map.of("user", TestUtils.USER_4, "destination", TestUtils.UNI_3));
+        Journey newJourney5 = insertJourney(ds, Map.of("user", USER_4, "destination", UNI_3));
 
-        Page<Journey> page1 = journeyDao.findRecommended(TestUtils.USER_1_MAIL, TestUtils.PAGE_1_BIG);
+        Page<Journey> page1 = journeyDao.findRecommended(USER_1_MAIL, PAGE_1_BIG);
 
         assertNotNull(page1);
         assertEquals(1, page1.getCurrentPage());
         assertEquals(1, page1.getTotalPages());
         assertNotNull(page1.getContent());
         assertEquals(5, page1.getContent().size());
-
-        TestUtils.assertEqualsJourney(newJourney1, page1.getContent().get(0));
-        TestUtils.assertEqualsJourney(newJourney2, page1.getContent().get(1));
-        TestUtils.assertEqualsJourney(newJourney4, page1.getContent().get(2));
-        TestUtils.assertEqualsJourney(newJourney5, page1.getContent().get(3));
-        TestUtils.assertEqualsJourney(newJourney3, page1.getContent().get(4));
+        assertEqualsJourneyList(List.of(newJourney1, newJourney2, newJourney3, newJourney4, newJourney5), page1.getContent());
     }
 
     @Test
     public void testFindAllWithFilters(){
         Page<Journey> page = journeyDao.search(
             null,
-            TestUtils.USER_1_ID,
+            USER_1_ID,
             SortFieldJourney.START_DATE,
             SortDirection.ASC,
-            TestUtils.CITY_1_NAME,
-            TestUtils.JOURNEY_START_DATE,
-            TestUtils.JOURNEY_END_DATE,
-            TestUtils.INTEREST_1_NAME,
-            false,
+            CITY_1_NAME,
+            JOURNEY_START_DATE,
+            JOURNEY_END_DATE,
+            INTEREST_1_NAME,
             true,
-            true,
-            true,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
@@ -308,23 +353,63 @@ public class JourneyHibernateDaoTest {
         assertEquals(1, page.getCurrentPage());
         assertEquals(0, page.getTotalPages());
         assertEquals(0, page.getContent().size());
+    }
+    @Test
+    public void testFindAllWithFiltersNoCityMyDestination(){
+        Page<Journey> page = journeyDao.search(
+            null,
+            USER_1_ID,
+            SortFieldJourney.START_DATE,
+            SortDirection.ASC,
+        null,
+            JOURNEY_START_DATE,
+            JOURNEY_END_DATE,
+            INTEREST_1_NAME,
+            true,
+            PAGE_1_BIG
+        );
+
+        assertNotNull(page);
+        assertNotNull(page.getContent());
+        assertEquals(1, page.getCurrentPage());
+        assertEquals(0, page.getTotalPages());
+        assertEquals(0, page.getContent().size());
+    }
+    @Test
+    public void testFindAllWithFiltersInterestNoUser(){
+        Page<Journey> page = journeyDao.search(
+            USER_1_NAME,
+            null,
+            SortFieldJourney.END_DATE,
+            SortDirection.ASC,
+            null,
+            JOURNEY_START_DATE,
+            JOURNEY_END_DATE,
+            INTEREST_1_NAME,
+            true,
+            PAGE_1_BIG
+        );
+
+        assertNotNull(page);
+        assertNotNull(page.getContent());
+        assertEquals(1, page.getCurrentPage());
+        assertEquals(1, page.getTotalPages());
+        assertEquals(1, page.getContent().size());
+        assertEqualsJourney(JOURNEY_1, page.getContent().getFirst());
     }
     @Test
     public void testFindAllWithFiltersComplex(){
         Page<Journey> page = journeyDao.search(
-            TestUtils.USER_1_NAME,
-            TestUtils.USER_1_ID,
+            USER_1_NAME,
+            USER_1_ID,
             SortFieldJourney.START_DATE,
             SortDirection.ASC,
-            TestUtils.CITY_1_NAME,
-            TestUtils.JOURNEY_START_DATE,
-            TestUtils.JOURNEY_END_DATE,
+            CITY_1_NAME,
+            JOURNEY_START_DATE,
+            JOURNEY_END_DATE,
             null,
             false,
-            true,
-            true,
-            false,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
@@ -334,45 +419,18 @@ public class JourneyHibernateDaoTest {
         assertEquals(0, page.getContent().size());
     }
     @Test
-    public void testFindAllWithFiltersComplexNoDestinationPastAttendingNoUser(){
+    public void testFindAllWithFiltersComplexNoDestinationNoUser(){
         Page<Journey> page = journeyDao.search(
-            TestUtils.USER_1_NAME,
+            USER_1_NAME,
             null,
             SortFieldJourney.START_DATE,
             SortDirection.ASC,
             "",
-            TestUtils.JOURNEY_START_DATE,
-            TestUtils.JOURNEY_END_DATE,
+            JOURNEY_START_DATE,
+            JOURNEY_END_DATE,
             null,
             true,
-            false,
-            true,
-            false,
-            TestUtils.PAGE_1_BIG
-        );
-
-        assertNotNull(page);
-        assertNotNull(page.getContent());
-        assertEquals(1, page.getCurrentPage());
-        assertEquals(0, page.getTotalPages());
-        assertEquals(0, page.getContent().size());
-    }
-    @Test
-    public void testFindAllWithFiltersComplexNoUserUpcoming(){
-        Page<Journey> page = journeyDao.search(
-            TestUtils.USER_2_NAME,
-            null,
-            SortFieldJourney.START_DATE,
-            SortDirection.ASC,
-            "",
-            TestUtils.JOURNEY_START_DATE,
-            TestUtils.JOURNEY_END_DATE,
-            null,
-            false,
-            true,
-            false,
-            false,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
@@ -380,24 +438,21 @@ public class JourneyHibernateDaoTest {
         assertEquals(1, page.getCurrentPage());
         assertEquals(1, page.getTotalPages());
         assertEquals(1, page.getContent().size());
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_2, page.getContent().get(0));
+        assertEqualsJourney(JOURNEY_1, page.getContent().getFirst());
     }
     @Test
-    public void testFindAllWithFiltersComplexNoUserUpcomingNoInterest(){
+    public void testFindAllWithFiltersComplexNoUser(){
         Page<Journey> page = journeyDao.search(
-            TestUtils.USER_1_NAME,
+            USER_2_NAME,
             null,
             SortFieldJourney.START_DATE,
             SortDirection.ASC,
             "",
-            TestUtils.JOURNEY_START_DATE,
-            TestUtils.JOURNEY_END_DATE,
-            "",
+            JOURNEY_START_DATE,
+            JOURNEY_END_DATE,
+            null,
             false,
-            true,
-            false,
-            false,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
@@ -405,48 +460,43 @@ public class JourneyHibernateDaoTest {
         assertEquals(1, page.getCurrentPage());
         assertEquals(1, page.getTotalPages());
         assertEquals(1, page.getContent().size());
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_1, page.getContent().get(0));
+        assertEqualsJourney(JOURNEY_2, page.getContent().get(0));
     }
     @Test
-    public void testFindAllWithFiltersNotUpcomingNotAttending(){
+    public void testFindAllWithFiltersComplexNoUsergNoInterest(){
         Page<Journey> page = journeyDao.search(
+            USER_1_NAME,
             null,
-            TestUtils.USER_1_ID,
-            SortFieldJourney.END_DATE,
+            SortFieldJourney.START_DATE,
             SortDirection.ASC,
-            TestUtils.CITY_1_NAME,
-            TestUtils.JOURNEY_START_DATE,
-            TestUtils.JOURNEY_END_DATE,
-            null,
+            "",
+            JOURNEY_START_DATE,
+            JOURNEY_END_DATE,
+            "",
             false,
-            false,
-            false,
-            false,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
         assertNotNull(page.getContent());
         assertEquals(1, page.getCurrentPage());
-        assertEquals(0, page.getTotalPages());
-        assertEquals(0, page.getContent().size());
+        assertEquals(1, page.getTotalPages());
+        assertEquals(1, page.getContent().size());
+        assertEqualsJourney(JOURNEY_1, page.getContent().get(0));
     }
     @Test
-    public void testFindAllWithFiltersNotUpcomingNotAttendingReverseSort(){
+    public void testFindAllWithFiltersReverseSort(){
         Page<Journey> page = journeyDao.search(
             null,
-            TestUtils.USER_1_ID,
+            USER_1_ID,
             SortFieldJourney.START_DATE,
             SortDirection.DESC,
-            TestUtils.CITY_1_NAME,
-            TestUtils.JOURNEY_START_DATE,
-            TestUtils.JOURNEY_END_DATE,
+            CITY_1_NAME,
+            JOURNEY_START_DATE,
+            JOURNEY_END_DATE,
             null,
             false,
-            false,
-            false,
-            false,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
@@ -467,10 +517,7 @@ public class JourneyHibernateDaoTest {
             null,
             null,
             false,
-            false,
-            false,
-            false,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
@@ -478,9 +525,7 @@ public class JourneyHibernateDaoTest {
         assertEquals(1, page.getCurrentPage());
         assertEquals(1, page.getTotalPages());
         assertEquals(2, page.getContent().size());
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_1, page.getContent().get(0));
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_2, page.getContent().get(1));
-
+        assertEqualsJourneyList(List.of(JOURNEY_1, JOURNEY_2), page.getContent());
     }
     @Test
     public void testFindAllWithFiltersNoParamsEmpty(){
@@ -494,10 +539,7 @@ public class JourneyHibernateDaoTest {
             null,
             "",
             false,
-            false,
-            false,
-            false,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
@@ -505,13 +547,13 @@ public class JourneyHibernateDaoTest {
         assertEquals(1, page.getCurrentPage());
         assertEquals(1, page.getTotalPages());
         assertEquals(2, page.getContent().size());
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_1, page.getContent().get(0));
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_2, page.getContent().get(1));
+        assertEqualsJourney(JOURNEY_1, page.getContent().get(0));
+        assertEqualsJourney(JOURNEY_2, page.getContent().get(1));
     }
     @Test
     public void testFindAllWithFiltersNoParamsFilter(){
         Page<Journey> page = journeyDao.search(
-            TestUtils.USER_2_NAME,
+            USER_2_NAME,
             null,
             SortFieldJourney.START_DATE,
             SortDirection.DESC,
@@ -520,10 +562,7 @@ public class JourneyHibernateDaoTest {
             null,
             null,
             false,
-            false,
-            false,
-            false,
-            TestUtils.PAGE_1_BIG
+            PAGE_1_BIG
         );
 
         assertNotNull(page);
@@ -532,6 +571,6 @@ public class JourneyHibernateDaoTest {
         assertEquals(1, page.getTotalPages());
         assertEquals(1, page.getContent().size());
         assertEquals(1, page.getContent().size());
-        TestUtils.assertEqualsJourney(TestUtils.JOURNEY_2, page.getContent().get(0));
+        assertEqualsJourney(JOURNEY_2, page.getContent().get(0));
     }
 }
